--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "dependencies": {
-    "express": "^4.18.1"
-  },
+  "name": "main",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
+    "test": "jest",
     "start": "node server.js"
   },
-  "name": "zookeeper",
-  "version": "1.0.0",
-  "main": "server.js",
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jest": "^29.0.3"
+  }
 }
